<resources>
    <string name="test_tag_mapa_cta" translatable="false">mapaCta</string>
    <string name="test_tag_consent_checkbox" translatable="false">consentCheckbox</string>
    <string name="test_tag_auth_scaffold" translatable="false">authScaffold</string>
</resources>
